--- a/main.css
+++ b/main.css
@@ -33,8 +33,10 @@ img {
   width: 45%;
   max-width: 250px;
 
-  padding-left: 5px;
-  padding-right: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+
+  border: 1px solid rgba(100, 100, 100, 0.5);
 }
 
 p {
