--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   background: rgb(250, 250, 250);
   font-family: verdana;
-  min-width: 340px;
+  min-width: 300px;
 }
 
 section {
@@ -26,6 +26,7 @@ article, header, .one {
 
 div.pics {
   width: 100%;
+  margin: auto;
   text-align: center;
 }
 
@@ -33,8 +34,8 @@ img {
   width: 45%;
   max-width: 250px;
 
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 2px;
+  margin-right: 2px;
 
   border: 1px solid rgba(100, 100, 100, 0.5);
 }
@@ -42,12 +43,16 @@ img {
 p {
   text-align: justify;
   font-size: 0.9em;
+  margin: auto;
+}
+
+article > p {
+  max-width: 500px;
 }
 
 h1 {
   text-align: center;
   font-size: 1em;
-  padding-left: 5px;
 }
 
 h2 {
@@ -58,7 +63,7 @@ h2 {
 
 @media screen and (min-width: 700px) {
   body {
-    font-size: 1.1em;
+    font-size: 1.05em;
   }
   section.RRiKSP > article {
     display: flex;
@@ -73,11 +78,9 @@ h2 {
   div.pics {
     width: 50%;
     margin: 0;
-    vertical-align: middle;
   }
-  img { vertical-align: middle; }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1050px) {
   section { width: 1000px; margin-left: auto; margin-right: auto; }
 }
