--- a/main.css
+++ b/main.css
@@ -10,18 +10,28 @@ section {
   margin: 5px 5px;
 
   border-style: solid;
-  border-color: rgba(200, 200, 200, 1);
+  border-color: rgb(200, 200, 200);
   border-width: 1px;
 }
 
-article, header, .one {
+article, header, footer, .one {
   padding: 5px 5px;
   margin: 5px 5px;
 
   border-top-style: solid;
   border-bottom-style: solid;
-  border-color: rgba(200, 200, 200, 1);
+  border-color: rgb(200, 200, 200);
   border-width: 1px;
+}
+
+ul {
+  padding: 0px;
+  margin: 5px;
+}
+
+li {
+  list-style-type: none;
+  padding-left: 5px;
 }
 
 div.pics {
@@ -37,7 +47,7 @@ img {
   margin-left: 2px;
   margin-right: 2px;
 
-  border: 1px solid rgba(100, 100, 100, 0.5);
+  border: 1px solid rgb(180, 180, 180);
 }
 
 p {
