--- a/main.css
+++ b/main.css
@@ -9,9 +9,7 @@ section {
   padding: 5px 5px;
   margin: 5px 5px;
 
-  border-style: solid;
-  border-color: rgb(200, 200, 200);
-  border-width: 1px;
+  border: 1px solid rgb(200, 200, 200);
 }
 
 article, header, footer, .one {
