--- a/main.css
+++ b/main.css
@@ -96,11 +96,15 @@ ul.navbar > li > a.active {
 }
 
 ul.links {
-  padding-left: 20px;
+  padding: 0px 20px;
 }
 
 ul.links > li {
   list-style-type: none;
+}
+
+ul.links > li + li {
+  margin-top: 10px;
 }
 
 ul.links > li > a {
@@ -108,6 +112,41 @@ ul.links > li > a {
   color: rgb(130, 130, 200);
 }
 
+div.orbit {
+  padding: 5px 5px;
+  margin: 0px 20px;
+}
+
+#OV {
+  width: 100px;
+  padding: 1px 5px;
+  border: 1px solid rgb(150, 150, 150);
+  background: rgb(50, 50, 55);
+  font-family: verdana;
+  font-size: 1em;
+  color: rgb(200, 200, 200);
+}
+
+/*content: calc(thing + thing)*/
+
+/*where mobile begins*/
+@media screen and (max-width: 450px) {
+  body {
+    text-align: justify;
+    font-size: 0.9em;
+  }
+
+  ul.links { padding: 0px 5px; }
+
+  #OV {
+    width: 100%;
+    padding: 15px 0px;
+    font-size: 2em;
+    text-align: center;
+  }
+}
+
 @media screen and (max-width: 360px) {
   ul.navbar > li > a { padding: 20px 20px; }
+  ul.links { padding: 0px 10px; }
 }
