--- a/main.css
+++ b/main.css
@@ -131,6 +131,7 @@ div.orbit {
 #OV {
   width: 100px;
   padding: 1px 5px;
+  margin-left: 5px;
   border: 1px solid rgb(150, 150, 150);
   background: rgb(50, 50, 55);
   font-family: verdana;
