--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ section > div > h1 {
   border-bottom: 1px solid rgb(80, 80, 80);
 }
 
-section > div > p, #OVresult {
+section > div > p {
   padding: 5px 5px;
   margin: 0;
 }
@@ -125,7 +125,7 @@ ul.links > li > a {
 
 div.orbit {
   padding: 5px 5px;
-  margin: 0px 20px;
+  margin: 5px 20px 0px 20px;
 }
 
 #OV {
@@ -137,6 +137,11 @@ div.orbit {
   font-family: verdana;
   font-size: 1em;
   color: rgb(200, 200, 200);
+}
+
+#OVresult {
+  padding: 5px 5px 0px 5px;
+  margin: 0;
 }
 
 /*content: calc(thing + thing)*/
