--- a/main.css
+++ b/main.css
@@ -10,13 +10,13 @@ body {
   color: rgb(200, 200, 200);
 }
 
-article {
+section {
   display: none;
   padding: 0 0;
   margin: 0 0;
 }
 
-section {
+article {
   background: rgb(90, 90, 97);
 
   padding: 5px 5px;
@@ -28,11 +28,11 @@ section {
   border: 1px solid rgb(150, 150, 150);
 }
 
-section > div {
+article > div {
   padding: 5px 5px;
 }
 
-section > div > h1 {
+article > div > h1 {
   width: 90%;
   text-align: center;
   font-size: 1.1em;
@@ -43,7 +43,7 @@ section > div > h1 {
   border-bottom: 1px solid rgb(50, 50, 55);
 }
 
-section > div > p {
+article > div > p {
   padding: 5px 5px;
   margin: 0;
 }
