removed the pointless divs in the articles

--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ section {
 article {
   background: rgb(90, 90, 97);
 
-  padding: 5px 5px;
+  padding: 10px 10px;
   margin: 10px auto;
 
   width: 90%;
@@ -28,11 +28,7 @@ article {
   border: 1px solid rgb(150, 150, 150);
 }
 
-article > div {
-  padding: 5px 5px;
-}
-
-article > div > h1 {
+article > h1 {
   width: 90%;
   text-align: center;
   font-size: 1.1em;
@@ -43,8 +39,9 @@ article > div > h1 {
   border-bottom: 1px solid rgb(50, 50, 55);
 }
 
-article > div > p {
-  padding: 5px 5px;
+article > p {
+  text-align: justify;
+  padding: 5px 10px;
   margin: 0;
 }
 
