--- a/main.css
+++ b/main.css
@@ -115,7 +115,7 @@ ul.links > li + li {
   margin-top: 10px;
 }
 
-ul.links > li > a {
+a {
   text-decoration: none;
   color: rgb(150, 150, 230);
 }
