added orbital period, or was that the last one?

--- a/main.css
+++ b/main.css
@@ -151,6 +151,10 @@ div.orbit {
 
   ul.links { padding: 0px 10px; }
 
+  div.orbit > label {
+    display: none;
+  }
+
   #OVresult {
     text-align: center;
   }
