--- a/main.css
+++ b/main.css
@@ -8,6 +8,15 @@ body {
   color: rgb(220, 220, 220);
 }
 
+body::-webkit-scrollbar {
+    width: 0.8em;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: rgb(90, 90, 97);
+  border: 1px solid rgb(50, 50, 55);
+}
+
 section {
   display: none;
   padding: 0 0;
