--- a/main.css
+++ b/main.css
@@ -1,207 +1,159 @@
 body {
-  background: rgb(50, 50, 55);
-  padding: 0;
-  margin: 10px 0px;
+  padding: 0px, 0px;
+  margin: 0px 0px;
   font-family: verdana;
   font-size: 1em;
-  line-height: 1.4em;
-  color: rgb(220, 220, 220);
-}
-
-body::-webkit-scrollbar {
-    width: 0.8em;
-}
-
-body::-webkit-scrollbar-thumb {
-  background: rgb(90, 90, 97);
-  border: 1px solid rgb(50, 50, 55);
+  line-height: 1.3em;
+  color: rgb(255, 255, 255);
+  background-image: linear-gradient(rgba(50,50,100,0.5), rgba(50,50,100,0.5)), url("pictures/a2.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 section {
-  display: none;
-  padding: 0 0;
-  margin: 0 0;
-}
-
-article {
-  background: rgb(90, 90, 97);
-
-  padding: 10px 10px;
   margin: 10px auto;
-
-  width: 90%;
-  max-width: 1100px;
-
-  border: 1px solid rgb(150, 150, 150);
+  padding: 15px 30px;
+  border-radius: 5px;
+  width: 60%;
+  background: rgba(0, 0, 10, 0.8);
 }
 
-article > h1 {
-  width: 90%;
+section > article {
+  display: flex;
+  padding: 0px;
+}
+
+h1 {
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 1.5em;
   text-align: center;
+  margin: 0px 0px;
+  padding: 15px 0px;
+  box-shadow: 0px 3px 2px rgb(220, 220, 220);
+}
+
+h2 {
+  color: rgb(134, 174, 239);
   font-size: 1.1em;
-  padding-top: 5px;
-  padding-bottom: 15px;
-  margin: auto;
-  margin-bottom: 10px;
-  border-bottom: 1px solid rgb(50, 50, 55);
-}
-
-article > p {
-  text-align: justify;
-  padding: 5px 10px;
-  margin: 0;
-}
-
-#tab2 > article > div:not(.pics){
-  max-width: 650px;
-  margin: auto;
-}
-
-div.pics {
-  width: 100%;
-  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 15px;
   text-align: center;
 }
 
-div.pics > img {
-  width: 45%;
-  max-width: 250px;
-  margin: 0px;
-
-  border: 1px solid rgb(180, 180, 180);
+h3.table_header {
+  font-size: 1em;
+  width: 80%;
+  margin: 5px auto;
+  text-align: center;
 }
 
-ul.navbar {
+small {
+  font-weight: normal;
+}
+
+p {
+  margin: 0px;
+  padding: 0px;
+  text-align: justify;
+}
+
+ul.pictures {
+  display: flex;
   list-style: none;
   text-align: center;
   padding: 0;
   margin: 0;
+  margin-bottom: 10px;
 }
 
-ul.navbar > li {
+ul.pictures > li {
   display: inline-block;
   text-align: center;
   padding: 0px;
-  margin: 0px;
+  margin: auto;
 }
 
-ul.navbar > li > a {
-  display: block;
-  text-decoration: none;
-  color: rgb(0, 0, 0);
-  padding: 20px 30px;
-  margin-bottom: 3px;
-  background: rgb(90, 90, 97);
-}
-
-ul.navbar > li > a:hover:not(.active){
-  color: rgb(200, 200, 200);
-  background: rgb(80, 80, 85);
-  cursor: pointer;
-}
-
-ul.navbar > li > a.active {
-  color: rgb(200, 200, 200);
-  background: rgb(80, 80, 85);
-  padding-bottom: 23px;
-  margin-bottom: 0px;
-  cursor: default;
-}
-
-#navline {
-  width: 100%;
-  border-top: 3px solid rgb(80, 80, 85);
+ul.pictures > li > img {
+  max-height: 70px;
 }
 
 ul.links {
-  padding: 0px 20px;
-}
-
-ul.links > li {
-  list-style-type: none;
-}
-
-ul.links > li + li {
-  margin-top: 10px;
-}
-
-a {
-  text-decoration: none;
-  color: rgb(150, 150, 230);
-}
-
-div.orbit {
-  padding: 5px 5px;
-  margin: 5px 20px;
-}
-
-#OV {
-  width: 150px;
-  padding: 1px 5px;
-  margin-left: 5px;
-  border: 1px solid rgb(150, 150, 150);
-  background: rgb(50, 50, 55);
-  font-family: verdana;
-  font-size: 1em;
-  color: rgb(200, 200, 200);
-}
-
-#OVresult {
-  padding: 5px 0px 0px 0px;
+  display: flex;
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  padding-top: 15px;
   margin: 0;
 }
 
-/*where mobile begins*/
-@media screen and (max-width: 500px) {
+ul.links > li {
+  margin: auto;
+}
+
+ul.links > li > a {
+  text-decoration: none;
+  display: block;
+  background: rgba(134, 174, 239, 0.5);
+  border-radius: 50%;
+  height: 4em;
+  width: 4em;
+  line-height: 4em;
+  color: rgb(255, 255, 255);
+}
+
+ul.links > li > a > img {
+  width: inherit;
+  height: inherit;
+}
+
+div.table {
+  width: 45%;
+  margin: auto;
+  margin-top: 0;
+  padding: 0;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0;
+}
+
+td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+b {
+  color: rgb(134, 174, 239);
+  margin-right: 15px;
+}
+
+@media screen and (max-width: 1000px) {
+  section {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   body {
-    text-align: justify;
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
-
-  ul.links { padding: 0px 10px; }
-
-  div.orbit > label {
-    display: none;
+  section {
+    width: auto;
+    margin: 10px 10px;
+    padding: 10px 10px;
   }
-
-  #OVresult {
-    text-align: center;
+  h2 {
+    margin-bottom: 10px;
   }
-
-  #OV {
-    width: 100%;
-    padding: 15px 0px;
-    margin: 0px;
-    font-size: 2em;
-    text-align: center;
+  h3.table_header {
+    margin-top: 0px;
   }
-
-  div.sidebar {
-    display: none;
+  ul.pictures > li > img {
+    max-height: 40px;
   }
-}
-
-@media screen and (min-width: 900px) {
-  #tab2 > article {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  #tab2 > article > div {
-    width: 50%;
-  }
-  #tab2 > article > h1 {
-    width: 100%;
-  }
-  div.pics {
-    width: 50%;
-    margin: 0;
-  }
-  div.pics > img {
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 360px) {
-  ul.navbar > li > a { padding: 20px 20px; }
-  ul.links { padding: 0px 10px; }
 }
