--- a/main.css
+++ b/main.css
@@ -5,9 +5,10 @@ body {
   font-size: 1em;
   line-height: 1.3em;
   color: rgb(255, 255, 255);
-  background-image: linear-gradient(rgba(50,50,100,0.5), rgba(50,50,100,0.5)), url("pictures/a2.png");
+  background-image: linear-gradient(rgba(50,50,100,0.5), rgba(50,50,100,0.5)), url("pictures/a2blur.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 section {
