--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
   font-size: 1em;
   line-height: 1.3em;
   color: rgb(255, 255, 255);
-  background-image: linear-gradient(rgba(50,50,100,0.5), rgba(50,50,100,0.5)), url("pictures/a2blur.jpg");
+  background-image: linear-gradient(rgba(50,50,100,0.5), rgba(50,50,100,0.5)), url("pictures/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -16,7 +16,7 @@ section {
   padding: 15px 30px;
   border-radius: 5px;
   width: 60%;
-  background: rgba(0, 0, 10, 0.8);
+  background: rgba(0, 0, 10, 0.6);
 }
 
 section > article {
