--- a/main.css
+++ b/main.css
@@ -87,6 +87,27 @@ ul.pictures > li > img {
   margin: 10px 10px;
 }
 
+div.icons {
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+span.icon {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+}
+
+span.icon > img {
+  max-height: 70px;
+  /* margin: 10px 10px; */
+}
+
 ul.links {
   display: flex;
   list-style: none;
@@ -149,11 +170,11 @@ a {
 }
 
 @media screen and (min-width: 701px) {
-  ul.pictures > li > img.enlarge {
+  span.icon > img.enlarge {
     max-height: 90px;
-    margin: 0;
+    /* margin: 0; */
     transition-property: all;
-    transition-duration: 0.1s;
+    transition-duration: 0.2s;
   }
   .highlight {
     color: rgb(134, 174, 239);
@@ -175,13 +196,16 @@ a {
   p {
     text-align: center;
   }
+  b {
+    color: rgb(134, 174, 239);
+  }
   h2 {
     margin-bottom: 10px;
   }
   h3.table_header {
     margin-top: 0px;
   }
-  ul.pictures > li > img {
+  span.icon > img {
     max-height: 40px;
   }
   div.table {
