animation works on when it goes back to normal

--- a/main.css
+++ b/main.css
@@ -105,7 +105,8 @@ span.icon {
 
 span.icon > img {
   max-height: 70px;
-  /* margin: 10px 10px; */
+  transition-property: all;
+  transition-duration: 0.2s;
 }
 
 ul.links {
@@ -172,7 +173,6 @@ a {
 @media screen and (min-width: 701px) {
   span.icon > img.enlarge {
     max-height: 90px;
-    /* margin: 0; */
     transition-property: all;
     transition-duration: 0.2s;
   }
